// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AwaitContext can use extra settings 1`] = `
<DocumentFragment>
  <div
    class="test-enter test-enter-active"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; min-height: 0; min-width: 0;"
    >
      <div
        data-testid="forced-loading"
      >
        Forced loading view
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AwaitContext can use mountedBeforeStandby = false 1`] = `
<DocumentFragment>
  <div
    class="default-test-exit default-test-exit-active"
  />
</DocumentFragment>
`;

exports[`AwaitContext matches error state 1`] = `
<DocumentFragment>
  <div
    class="default-test-enter default-test-enter-active"
  >
    <div
      data-testid="error"
    >
      Error
    </div>
  </div>
</DocumentFragment>
`;

exports[`AwaitContext matches initial state 1`] = `
<DocumentFragment>
  <div
    class="default-test-appear default-test-appear-active"
  >
    <div
      data-testid="standby"
    >
      Standby
    </div>
  </div>
</DocumentFragment>
`;

exports[`AwaitContext matches loading state 1`] = `
<DocumentFragment>
  <div
    class="default-test-enter default-test-enter-active"
  >
    <div
      style="display: flex; justify-content: center; align-items: center; min-height: 0; min-width: 0;"
    >
      <div
        data-testid="loading"
      >
        Default loading
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AwaitContext matches standby state 1`] = `
<DocumentFragment>
  <div
    class="default-test-enter default-test-enter-active"
  >
    <div
      data-testid="standby"
    >
      Standby
    </div>
  </div>
</DocumentFragment>
`;
